--- a/style.css
+++ b/style.css
@@ -13,9 +13,8 @@ p,a,button{
 }
 /* Video */
 .video{
-    margin-top: 5%;
     width: 60%;
-    margin: auto;
+    margin: 5% auto;
 }
 .video video{
     width: 75%;
@@ -28,7 +27,7 @@ p,a,button{
 .faq-container{
     width: 60%;
     height: 400px;
-    margin: 5% auto;
+    margin: 0 auto 5% auto;
     overflow: auto;
     display: flex;
     background-color: #ffffff;
@@ -59,6 +58,10 @@ p,a,button{
 }
 .faq-container::-webkit-scrollbar-thumb:hover {
     background: #f39c12;
+}
+.faq-title{
+    width: 60%;
+    margin: auto;
 }   
 .faq p{
     font-size: 1rem;
@@ -74,7 +77,7 @@ p,a,button{
     background-color: #f39c12;
     border: 1px solid #f39c12;
     line-height: inherit;
-    padding: 8px 40px;
+    padding: 10px 20px;
     text-decoration: none;
     float: right;
     margin-bottom: 5%;
@@ -91,11 +94,7 @@ p,a,button{
 
 /* Questionnaire */
 #regForm {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 5% auto;
     padding: 30px 50px;
     width: 40%;
     border-radius: 10px;
@@ -142,7 +141,7 @@ input.invalid {
 }
 
 #regForm button:hover {
-    opacity: 0.8;
+    opacity: 0.5;
 }
 
 #prevBtn {
@@ -158,7 +157,7 @@ input.invalid {
     border: none;  
     border-radius: 50%;
     display: inline-block;
-    opacity: 0.5;
+    opacity: 0.8;
 }
 
 .step.active {
@@ -177,7 +176,7 @@ input.invalid {
     display: block;
     position: relative;
     padding-left: 40px;
-    margin-top: 15px;
+    margin: 5% 0;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -249,9 +248,11 @@ input.invalid {
     }
     .video{
         width: 90%;
-        margin: auto;
     }
     .video video{
         width: 90%;
     }
+    .faq-title{
+        width: 90%;
+    }  
   }
