--- a/style.css
+++ b/style.css
@@ -274,4 +274,7 @@ input.invalid {
     .accordions {
         width: 90%;
     } 
+    .accordion-item .accordion-title h3 {
+        font-size: 15px;
+    }
   }
